--- a/assets/styles/pages/_photography.scss
+++ b/assets/styles/pages/_photography.scss
@@ -44,6 +44,8 @@
 }
 
 .project-grid {
+  padding-top: 3px;
+  margin-top: -3px;
   position: relative;
 
   .grid-sizer {
